UILayout.prop() does not display enum elements when icon is supplied and icon_only=True #31338

Closed
opened 2012-05-06 21:09:39 +02:00 by dima glib · 11 comments
Member

%%%The following example code results in an icon-only menu with no items displayed:
layout.prop(some_data, "some_enum", icon='SOME_ICON', icon_only=True)

This behavior has been present for a long time; the latest version I checked this in is Blender 2.63 official Win32 release (r45996).

An illustration is attached; for comparison, the result of layout.prop_menu_enum() with the same arguments is also present on the picture.%%%

%%%The following example code results in an icon-only menu with no items displayed: layout.prop(some_data, "some_enum", icon='SOME_ICON', icon_only=True) This behavior has been present for a long time; the latest version I checked this in is Blender 2.63 official Win32 release (r45996). An illustration is attached; for comparison, the result of layout.prop_menu_enum() with the same arguments is also present on the picture.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Will look into this.%%%

%%%Will look into this.%%%

%%%Got patch for this, but it's getting tricky.
Actually, i'm not sure if supporting enums with cusotm icon and hidden text is a good idea -- you wouldn't be able to see which exactly element is currently active. Also more tests of patch are needed.

Brecht, what do you think about such glitch in interface engine in general and about patch?%%%

%%%Got patch for this, but it's getting tricky. Actually, i'm not sure if supporting enums with cusotm icon and hidden text is a good idea -- you wouldn't be able to see which exactly element is currently active. Also more tests of patch are needed. Brecht, what do you think about such glitch in interface engine in general and about patch?%%%
Author
Member

%%%"you wouldn't be able to see which exactly element is currently active" -- in my case, I set a different icon depending on the active element. It would be better if the corresponding icons could be displayed alongside the enum items, but making a menu for each such case is an overkill.%%%

%%%"you wouldn't be able to see which exactly element is currently active" -- in my case, I set a different icon depending on the active element. It would be better if the corresponding icons could be displayed alongside the enum items, but making a menu for each such case is an overkill.%%%

%%%Enum elements can have icons. Why it doesn't fit your needs?%%%

%%%Enum elements can have icons. Why it doesn't fit your needs?%%%
Author
Member

%%%They do? There isn't a single word about that in the API documentation %)%%%

%%%They do? There isn't a single word about that in the API documentation %)%%%
Author
Member

%%%...at least, www.blender.org/documentation/blender_python_api_2_62_release/bpy.props.html says nothing about enum item icons.%%%

%%%...at least, www.blender.org/documentation/blender_python_api_2_62_release/bpy.props.html says nothing about enum item icons.%%%

%%%Hmm, i see the problem now. Way to define per-element icon seems not to be exposes into python. Didn't know this.%%%

%%%Hmm, i see the problem now. Way to define per-element icon seems not to be exposes into python. Didn't know this.%%%
Member

%%%Ran into this as well, still present in 2.65.9.

Would like to have an enum dropdown that only displays the icons, then when clicked it shows the icon+name of the item.

Just like the Snap type options menu in the 3D View header, it shows the types of Snap in an icon only, but when clicked the dropdown menu shows the Icon+Name.

Can we have this pretty please?%%%

%%%Ran into this as well, still present in 2.65.9. Would like to have an enum dropdown that only displays the icons, then when clicked it shows the icon+name of the item. Just like the Snap type options menu in the 3D View header, it shows the types of Snap in an icon only, but when clicked the dropdown menu shows the Icon+Name. Can we have this pretty please?%%%

%%%I've added support now for adding icons to enum items, use the following order:
(identifier, name, description, icon, number) %%%

%%%I've added support now for adding icons to enum items, use the following order: (identifier, name, description, icon, number) %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31338
No description provided.