Fix #31338: python enum properties can now specify icons for items, in the following order: (identifier, name, description, icon, unique number)

This also works without the icon still, for compatibility.